--- a/tkinterGUI_toArduino/GUI_to_Arduino/platformio.ini
+++ b/tkinterGUI_toArduino/GUI_to_Arduino/platformio.ini
@@ -12,5 +12,7 @@
 platform = atmelavr
 board = uno
 framework = arduino
-upload_port=COM17
-monitor_speed = 9600
+upload_port = COM17
+monitor_speed = 115200
+lib_deps = powerbroker2/SerialTransfer@^3.1.3, Wire @ ^1.0
+
